@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Track quests already completed once, so we can avoid giving a super reward
+all the time.
+Nicolas Weeger 2010-01-24
+
 Revamp quests, use a definition file to factorize things.
 Nicolas Weeger 2010-01-24
 
